FIXED: alignment issue with each article. as well as change pervious and next nav to the side of browser. contact page place content accordingly with browser size

--- a/wp-content/themes/siso/css/contact.css
+++ b/wp-content/themes/siso/css/contact.css
@@ -16,8 +16,8 @@ navbar
 
 #contactText {
 	position:absolute;
-  top:50%;
-  left: 50%;
+	top:50%;
+	left: 50%;
    	transform: translate(-50%, -50%);
    	width:100%;
 
@@ -33,12 +33,23 @@ navbar
 }
 
 #maincontact {
-position: absolute;
-  top:55%;
-  left: 50%;
-   	transform: translate(-50%, -50%);
+	position: absolute;
+  	/*top:55%;
+  	left: 50%;
+   	transform: translate(-50%, -50%);*/
    	width: 80%;
 	height: 80%;
+}
+
+/*if that is going to change the spacing problem*/
+#contactText {
+	position:absolute;
+	top:10.5%;
+	left: 55%;
+   	transform: translateX(-50%);
+   	width:100%;
+	/*padding-left: 30px;
+	padding-right: 40px;*/
 }
 
 #contdetails {
@@ -97,6 +108,8 @@ position: absolute;
   width: 1px;
   word-wrap: normal !important;
 }
+
+
 
 @media (min-width: 768px) and (max-width: 900px) and (max-height: 500px) {
 
